Update Decision Frontend files

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,6 @@
 body {
   color: #000000;
   background: none; /* Remove the default background */
-  font-family: 'Cardo', serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
 }
